# ScrapeJobs

./: .gitignore  README.md  example.env  main.py  pyproject.toml
logs/: README.md
scrape_jobs/config/: selenium_config.py  settings.py
scrape_jobs/utils/: logging.py
